  will create the join of the primary key columns represented by "somerelationname"'s mapper to the
  actual primary key in "someinstance".
  - some deeper error checking when compiling relations, to detect an ambiguous "primaryjoin"
  in the case that both sides of the relationship have foreign key references in the primary
  join condition
  - fix to "proxy=True" behavior on synonym()
  - fixed bug where delete-orphan basically didn't work with many-to-many relationships [ticket:427],
  backref presence generally hid the symptom
  - added a mutex to the mapper compilation step.  ive been reluctant to add any kind
  of threading anything to SA but this is one spot that its its really needed since mappers
  are typically "global", and while their state does not change during normal operation, the 
  initial compilation step does modify internal state significantly, and this step usually
  occurs not at module-level initialization time (unless you call compile()) but at first-request 
  time
  - basic idea of "session.merge()" actually implemented.  needs more testing.
  - added "compile_mappers()" function as a shortcut to compiling all mappers
  - fix to MapperExtension create_instance so that entity_name properly associated
with new instance
  - speed enhancements to ORM object instantiation, eager loading of rows
  - invalid options sent to 'cascade' string will raise an exception [ticket:406]
  - fixed bug in mapper refresh/expire whereby eager loaders didnt properly re-populate
  item lists [ticket:407]
  - fix to post_update to ensure rows are updated even for non insert/delete scenarios
  [ticket:413]
  - added an error message if you actually try to modify primary key values on an entity
  and then flush it [ticket:412]

0.3.3
- string-based FROM clauses fixed, i.e. select(..., from_obj=["sometext"])
- fixes to passive_deletes flag, lazy=None (noload) flag
- added example/docs for dealing with large collections